--- a/shark-week/src/App.css
+++ b/shark-week/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: lightergray;
 }
 
 .twitter-meta {
@@ -80,4 +81,4 @@ a:visited {
     margin: auto;
     width: 50%;
     padding: 10px;
-  }
+}
